2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* HeadTail.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex:
	* SetLiteral.cs: 

2013-09-16  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* .gitignore:
	* MiniZinc.lex:
	* MiniZinc.bison:
	* CompilerVerbosity.cs: 

2013-09-02  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincType.cs:
	* MiniZinc.lex:
	* SetLiteral.cs:
	* FloatRange.cs:
	* MiniZinc.bison:
	* IntegerRange.cs:
	* ZincCompound.cs:
	* ZincTotalOrder.cs:
	* ZincTypeInstance.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincScope.cs:
	* ZincIScope.cs:
	* ZincNamespace.cs:
	* ZincScopeBase.cs:
	* ZincINamespace.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincItem.cs:
	* ZincIName.cs:
	* ZincScope.cs:
	* ZincModel.cs:
	* MiniZinc.bison:
	* ZincNameBase.cs:
	* ZincFunction.cs:
	* ZincPredicate.cs:
	* ZincException.cs:
	* ZincNamespace.cs:
	* MiniZincParser.cs:
	* ZincINamespace.cs:
	* ZincVarDeclItem.cs:
	* ZincParseException.cs:
	* ZincGlobalVariable.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.bison: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* Manpage.txt:
	* MiniZinc.cs:
	* AcasType.cs:
	* MiniZinc.lex:
	* MiniZinc.bison:
	* Interaction.cs:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs: 

2013-08-27  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* jobshop.mzn:
	* ZincItem.cs:
	* ZincData.cs:
	* ZincType.cs:
	* AcasType.cs:
	* ZincModel.cs:
	* ZincScalar.cs:
	* ZincCompound.cs:
	* ZincInstance.cs:
	* ZincEnumItem.cs:
	* jobshop2x2.data:
	* AcasConstant.cs:
	* AcasVariable.cs:
	* AcasOperator.cs:
	* ZincIdentifier.cs: