@@ -1,6 +1,12 @@
 2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* MiniZinc.lex:
+	* MiniZinc.bison:
+	* MiniZincParser.cs: 
+
+2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* MiniZinc.lex:
 	* MiniZinc.bison: 
 
 2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>
